Fixed bug #24909 (Bad random numbers with ZTS builds on Solaris)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@136996 c90b9560-bf6c-de11-be94-00142212c4b1